--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,56 @@
+body{
+  /*background-color: #70D1FF;*/
+  background-image: url('../img/fond.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Gochi Hand', cursive;
+}
+
 
 .header{
-    background-color: #04365D;
-    width:100%;
-    height:100%;
-    display:inline-flex;
+    background-image:url('../img/donuts.png');
+    background-repeat: no-repeat;
+    display:flex;
+    justify-content: flex-start;
+    width:300px;
+    height:150px;
+
+
 }
 
 .header-title{
-    text-align: center;
-    font-size:30px;
-}
-
-.tweet{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-.image{
-  margin-top: 100px;
-  display:flex;
+  display: block;
   justify-content: center;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+  font-size:50px;
+
 }
 
+.head-form{
+  display:flex;
+  justify-content: flex-end;
+
+
+}
+
+.container{
+  /*border:1px solid black;*/
+/*  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+  width:50%;
+  height:100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 150px;
+  margin-left: auto;
+  margin-right: auto;
+/*  background-color: rgba(23,145,255,0);*/
+
+}
 
 textarea {
     padding: 10px;
@@ -30,9 +58,26 @@ textarea {
     border-radius: 5px;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px #999;
+    background-color: #FFD90F;
+    font-family: 'Gochi Hand', cursive;
+    font-size:20px;
+    display:flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+
 }
 
-body {font-family: Arial, Helvetica, sans-serif;}
+input{
+    width: 120px;
+    height: 40px;
+    border-radius:25px;
+    margin-left: 35px;
+    background-color: #EC050C;
+    font-family: 'Gochi Hand', cursive;
+    font-size: 30px;
+    outline:0;
+
+}
 
 /* The Modal (background) */
 .modal {
@@ -107,4 +152,3 @@ body {font-family: Arial, Helvetica, sans-serif;}
     background-color: #87CEEB;
     height: 70px;
 }
-
