--- a/css/NEWstyle.css
+++ b/css/NEWstyle.css
@@ -10,8 +10,9 @@ body{
 .header{
     background-image:url('../img/donuts.png');
     background-repeat: no-repeat;
-    display:flex;
-    justify-content: flex-start;
+    display:inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
     width:300px;
     height:150px;
 
@@ -34,6 +35,7 @@ body{
   justify-content: flex-end;
 
 
+
 }
 
 .container{
@@ -53,6 +55,7 @@ body{
 }
 
 textarea {
+    margin-top: 50px;
     padding: 10px;
     line-height: 1;
     border-radius: 5px;
@@ -61,10 +64,10 @@ textarea {
     background-color: #FFD90F;
     font-family: 'Gochi Hand', cursive;
     font-size:20px;
-    display:flex;
+    /*display:flex;
     align-items: flex-end;
-    justify-content: flex-end;
-
+    justify-content:space-between;
+*/
 }
 
 input{
